<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="5dp"
    card_view:contentPadding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/ripple_with_selector"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_link_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="标题"
                android:textColor="#CC6666"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_link_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="描述"
                android:textColor="#001040"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_item_link_href"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="链接"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="#8c8c8c"
            android:textSize="14sp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f5f5f5"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/linear_add_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_icon_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ion_android_time"
                    android:textColor="#DDDDDD"
                    android:textSize="20sp" />

                <com.ddiehl.timesincetextview.TimeSinceTextView
                    android:id="@+id/tv_item_link_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="时间"
                    android:textColor="#8c8c8c"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_item_search_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_with_selector"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_icon_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ion_android_textsms"
                    android:textColor="#DDDDDD"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_search_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="评论"
                    android:textColor="#8c8c8c"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_item_search_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_with_selector"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_icon_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ion_android_more_horizontal"
                    android:textColor="#DDDDDD"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_search_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="更多"
                    android:textColor="#8c8c8c"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>